# decypher

./: .gitignore  README.md  code.md  cypher-text.txt  download.sh  plain-text.txt  pyproject.toml  run.py  validate.py
.devcontainer/: .bsahrc  Dockerfile  devcontainer.json
decypher/: __init__.py  main.py  signature_word_map.py  word_index.py
tests/: main_test.py  signature_word_map_test.py  word_index_test.py
