[tool.poetry]
name = "decypher"
version = "0.1.0"
description = "Decyphers simple substitution cyphers so you don't have to."
authors = ["Josh Bickley-Wallace <joshbickleywallace@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyfakefs = "^5.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-watch = "^4.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
